@@ -1,3 +1,8 @@
+2006-06-07  Dai Sato  <satodai@w3m.jp>
+
+	* [w3m-dev 04129] handling newlines in form values 
+	* parsetagx.c: don't delete newlines in hidden values.
+
 2006-05-29  Dai Sato  <satodai@w3m.jp>
 
 	* [w3m-dev-en 01067] Some more patches
